[gd_scene load_steps=5 format=3 uid="uid://28bbwfewtxnx"]

[ext_resource type="Script" uid="uid://b3gkp4kmvco26" path="res://Scripts/StartMenu.gd" id="1_script"]
[ext_resource type="VideoStream" uid="uid://bvd6bm6wrpsqe" path="res://Assets/menu_bg.ogv" id="2_ia0g5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0, 0, 0, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.84, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_ia0g5")
autoplay = true
expand = true
buffering_msec = 1000

[node name="BackgroundPlaceholder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 72
text = "ARCHEMIDIA"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Survival RPG"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 50.0
offset_right = 125.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BtnEnter" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "ENTER WORLD"

[node name="BtnSettings" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "SETTINGS"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "QUIT"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SettingsPanel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/VBox"]
layout_mode = 2

[node name="Label2" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "(Settings Placeholder)"
horizontal_alignment = 1

[node name="BtnCloseSettings" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"

[connection signal="mouse_entered" from="VBoxContainer/BtnEnter" to="." method="_on_button_mouse_entered" binds= [NodePath("VBoxContainer/BtnEnter")]]
[connection signal="mouse_exited" from="VBoxContainer/BtnEnter" to="." method="_on_button_mouse_exited" binds= [NodePath("VBoxContainer/BtnEnter")]]
[connection signal="pressed" from="VBoxContainer/BtnEnter" to="." method="_on_enter_world_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/BtnSettings" to="." method="_on_button_mouse_entered" binds= [NodePath("VBoxContainer/BtnSettings")]]
[connection signal="mouse_exited" from="VBoxContainer/BtnSettings" to="." method="_on_button_mouse_exited" binds= [NodePath("VBoxContainer/BtnSettings")]]
[connection signal="pressed" from="VBoxContainer/BtnSettings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsPanel/VBox/BtnCloseSettings" to="." method="_on_close_settings_pressed"]
